--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
       </div>
     </div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/scripts/index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
