--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div class="modal" id="signup-modal">
+    <!-- <div class="modal" id="signup-modal">
       <div class="modal__container">
         <button type="button" class="modal__close-btn"></button>
         <h2 class="modal__title">Sign Up</h2>
@@ -79,8 +79,8 @@
           <button type="submit" class="modal__submit-btn">Save</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script type="module" src="/src/main.jsx"></script>
-    <script src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/index.js"></script> -->
   </body>
 </html>
